More work on starter notebook

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -1306,7 +1306,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "updated_listings = updated_listings.set_index('id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1316,10 +1325,10 @@
     {
      "data": {
       "text/plain": [
-       "Index(['id', 'name', 'summary', 'description', 'experiences_offered',\n",
-       "       'host_id', 'host_name', 'host_since', 'host_location',\n",
-       "       'host_response_time', 'host_response_rate', 'host_acceptance_rate',\n",
-       "       'host_is_superhost', 'host_neighbourhood', 'host_listings_count',\n",
+       "Index(['name', 'summary', 'description', 'experiences_offered', 'host_id',\n",
+       "       'host_name', 'host_since', 'host_location', 'host_response_time',\n",
+       "       'host_response_rate', 'host_acceptance_rate', 'host_is_superhost',\n",
+       "       'host_neighbourhood', 'host_listings_count',\n",
        "       'host_total_listings_count', 'host_verifications',\n",
        "       'host_has_profile_pic', 'host_identity_verified', 'street',\n",
        "       'neighbourhood', 'neighbourhood_cleansed',\n",
@@ -1343,7 +1352,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
