Convert to price prediction

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -1694,6 +1694,225 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Language Work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Modern NYC', 'Skylit Midtown Castle',\n",
+       "       'Cozy Entire Floor of Brownstone', ...,\n",
+       "       'Comfort room close to subway, 20 mins to Mid-town',\n",
+       "       'Gorgeous Bedroom with WD in Luxury Bldg, Times Sq',\n",
+       "       'Brooklyn home'], dtype=object)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "updated_listings.name.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([\"Lovely, spacious, sunny 1 BR apartment in 6th Floor elevator building steps from gorgeous Fort Tryon Park/The Cloisters in Manhattan, less than 5 min walk from the A-train, 25-minutes to midtown Manhattan. Neighborhood is quiet, safe and hilly. Fully equipped, all brand new kitchen; king size bed; WiFi and cable; and more. We are looking for responsible renters who don't mind feeding our Maine Coon cat while staying there. \",\n",
+       "       'Beautiful, spacious skylit studio in the heart of Midtown, Manhattan.  STUNNING SKYLIT STUDIO / 1 BED + SINGLE / FULL BATH / FULL KITCHEN / FIREPLACE / CENTRALLY LOCATED / WiFi + APPLE TV / SHEETS + TOWELS - Spacious (500+ft²), immaculate and nicely furnished & designed studio. - Tuck yourself into the ultra comfortable bed under the skylight. Fall in love with a myriad of bright lights in the city night sky.  - Single-sized bed/convertible floor mattress with luxury bedding (available upon request). - Gorgeous pyramid skylight with amazing diffused natural light, stunning architectural details, soaring high vaulted ceilings, exposed brick, wood burning fireplace, floor seating area with natural zafu cushions, modern style mixed with eclectic art & antique treasures, large full bath, newly renovated kitchen, air conditioning/heat, high speed WiFi Internet, and Apple TV. - Centrally located in the heart of Midtown Manhattan just a few blocks from all subway connections in the very desir',\n",
+       "       \"Urban retreat: enjoy 500 s.f. floor in 1899 brownstone, with wood and ceramic flooring throughout, roomy bdrm, & upgraded kitchen & bathroom.  It's sunny and loaded with everything you need. COVID-19 PREVENTION:  Your AirBnb private floor (including bedroom, kitchen/dining, bathroom and linens), as well as common stairwell and areas, and rest of property are regularly cleaned and sanitized with EPA-approved Coronavirus-killing products. Greetings!      We own a double-duplex brownstone in Clinton Hill on Gates near Classon Avenue -  (7 blocks to C train, 5 blocks to G train, minutes to all), in which we host on the entire top floor of the upper duplex.  This is more of an efficiency set-up: it is the top floor on a two-family, double duplex brownstone.  The top floor for our guests consists of a sizable bedroom, full bath and eat-in kitchen for your exclusive use.  Our family occupies the floors below.  You go through a common hallway and staircase, to get to the top floor (2 easy flig\",\n",
+       "       ...,\n",
+       "       'Located in center of Astoria New York, this private room with huge living room is suitable for singles, couples and friends as it can accommodate up to 2 people. Just minutes walk to subway station, with quick access to Mid-town Manhattan, Central Park, Upper East Side and Downtown Manhattan, surround by restaurants, cool bars, cafes, bank and many convenience. Free high speed WIFI and shampoo provided. A private room with huge living room for your short and extended stays! Ikea brand new beddings and furniture to make your resting time as comfortable as possible. 2 guests maximum no exceptions. I will interact as much as the guest wishes. Communication via Airbnb system is preferred for booking and general questions. The neighborhood is safe, quiet and friendly. Subway, bus, taxi, uber, lyft, via, bike or even walk are easy to access around.',\n",
+       "       'Beautiful property in the heart of New York City with designer furniture and ultra-modern kitchenware. You will have a private bedroom with shared bathroom on the 4th floor of a luxury apartment building. \\xa0 In-Unit\\xa0Washer/Dryer  45” TV in living room  Air fryer, Keurig machine, pots, pans, plates, utensils  Study desk and computer chair in bedroom   Fresh towels, bedsheets   Vacuum, mop, cleaning supplies \\u200d♂️ Amenities: 24-hr concierge, resident lounges, gym, game room, theater, outdoor areas  Host has lived in New York for many years and will be able to provide instant help and information via iMessage. ☕️ Starbucks next door  Food Emporium down the block \\xa09 mins. walk to 42 St-Port Authority Subway Station (A/C/E Trains)',\n",
+       "       nan], dtype=object)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "updated_listings.description.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['$100.00', '$225.00', '$89.00', ..., '$53.00', '$93.00', '$125.00'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "updated_listings.price.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price ($)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2060</th>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2595</th>\n",
+       "      <td>225.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3831</th>\n",
+       "      <td>89.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5099</th>\n",
+       "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5121</th>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      price ($)\n",
+       "id             \n",
+       "2060      100.0\n",
+       "2595      225.0\n",
+       "3831       89.0\n",
+       "5099      200.0\n",
+       "5121       60.0"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pricing = updated_listings.price.str.extract(r'\\$([\\d.]+)').astype(float)\n",
+    "pricing.columns = ['price ($)']\n",
+    "pricing.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "price ($)    0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pricing.isnull().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pricing.to_csv('derived_data/prices.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id\n",
+       "2060        $100.00\n",
+       "2595        $225.00\n",
+       "3831         $89.00\n",
+       "5099        $200.00\n",
+       "5121         $60.00\n",
+       "             ...   \n",
+       "43134678    $220.00\n",
+       "43135043     $43.00\n",
+       "43135953     $53.00\n",
+       "43136152     $93.00\n",
+       "43138585    $125.00\n",
+       "Name: price, Length: 50378, dtype: object"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "updated_listings.price"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
