--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "Hello! Welcome to a guest lesson from Spencer. Spencer is a software engineer who works with data and machine learning models at [Picnic Health](https://picnichealth.com/).\n",
     "\n",
-    "Today's lesson will be on feature engineering. You'll spend the class diving into some example data, developing features and building a model.\n",
+    "Today's lesson will be on feature engineering. You'll spend the class diving into some example data, developing features and building a model. We'll also learn a bit about working with text.\n",
     "\n",
-    "You'll work individually but will check in with other's periodically to compare ideas.\n",
+    "You'll work individually but will check in with other periodically to compare ideas.\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -22,7 +22,7 @@
     "\n",
     "## The Goal\n",
     "\n",
-    "The plan today is to build a classification model that predicts whether given a bunch of host's listing whether that host will receive a high number of reviews.\n",
+    "The plan today is to build a classification model that predicts a listing's price.\n",
     "\n",
     "## The Plan\n",
     "\n",
@@ -54,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_ratings_per_host = pd.read_csv('https://raw.githubusercontent.com/sbarton272/usf_econ_622_feature_engineering/master/derived_data/total_ratings_per_host.csv',\n",
-    "                                     index_col='host_id')"
+    "prices = pd.read_csv('https://raw.githubusercontent.com/sbarton272/usf_econ_622_feature_engineering/master/derived_data/prices.csv',\n",
+    "                     index_col='id')"
    ]
   },
   {
@@ -64,7 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "listings = pd.read_csv('https://raw.githubusercontent.com/sbarton272/usf_econ_622_feature_engineering/master/derived_data/listings.csv')"
+    "listings = pd.read_csv('https://raw.githubusercontent.com/sbarton272/usf_econ_622_feature_engineering/master/derived_data/listings.csv',\n",
+    "                       index_col='id')"
    ]
   },
   {
@@ -231,6 +232,100 @@
    ],
    "source": [
     "listings.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 50378 entries, 0 to 50377\n",
+      "Data columns (total 71 columns):\n",
+      " #   Column                                        Non-Null Count  Dtype  \n",
+      "---  ------                                        --------------  -----  \n",
+      " 0   Unnamed: 0                                    50378 non-null  int64  \n",
+      " 1   id                                            50378 non-null  int64  \n",
+      " 2   name                                          50361 non-null  object \n",
+      " 3   summary                                       47877 non-null  object \n",
+      " 4   description                                   49097 non-null  object \n",
+      " 5   experiences_offered                           50378 non-null  object \n",
+      " 6   host_id                                       50378 non-null  int64  \n",
+      " 7   host_name                                     50370 non-null  object \n",
+      " 8   host_since                                    50370 non-null  object \n",
+      " 9   host_location                                 50225 non-null  object \n",
+      " 10  host_response_time                            29687 non-null  object \n",
+      " 11  host_response_rate                            29687 non-null  object \n",
+      " 12  host_acceptance_rate                          36047 non-null  object \n",
+      " 13  host_is_superhost                             50370 non-null  object \n",
+      " 14  host_neighbourhood                            42946 non-null  object \n",
+      " 15  host_listings_count                           50370 non-null  float64\n",
+      " 16  host_total_listings_count                     50370 non-null  float64\n",
+      " 17  host_verifications                            50378 non-null  object \n",
+      " 18  host_has_profile_pic                          50370 non-null  object \n",
+      " 19  host_identity_verified                        50370 non-null  object \n",
+      " 20  street                                        50378 non-null  object \n",
+      " 21  neighbourhood                                 50365 non-null  object \n",
+      " 22  neighbourhood_cleansed                        50378 non-null  object \n",
+      " 23  neighbourhood_group_cleansed                  50378 non-null  object \n",
+      " 24  city                                          50230 non-null  object \n",
+      " 25  state                                         50372 non-null  object \n",
+      " 26  zipcode                                       49938 non-null  object \n",
+      " 27  market                                        50282 non-null  object \n",
+      " 28  smart_location                                50378 non-null  object \n",
+      " 29  country_code                                  50378 non-null  object \n",
+      " 30  country                                       50378 non-null  object \n",
+      " 31  latitude                                      50378 non-null  float64\n",
+      " 32  longitude                                     50378 non-null  float64\n",
+      " 33  is_location_exact                             50378 non-null  object \n",
+      " 34  property_type                                 50378 non-null  object \n",
+      " 35  room_type                                     50378 non-null  object \n",
+      " 36  accommodates                                  50378 non-null  int64  \n",
+      " 37  bathrooms                                     50319 non-null  float64\n",
+      " 38  bedrooms                                      50281 non-null  float64\n",
+      " 39  beds                                          49858 non-null  float64\n",
+      " 40  bed_type                                      50378 non-null  object \n",
+      " 41  amenities                                     50378 non-null  object \n",
+      " 42  square_feet                                   395 non-null    float64\n",
+      " 43  price                                         50378 non-null  object \n",
+      " 44  cleaning_fee                                  39704 non-null  object \n",
+      " 45  guests_included                               50378 non-null  int64  \n",
+      " 46  extra_people                                  50378 non-null  object \n",
+      " 47  minimum_nights                                50378 non-null  int64  \n",
+      " 48  maximum_nights                                50378 non-null  int64  \n",
+      " 49  minimum_minimum_nights                        50378 non-null  int64  \n",
+      " 50  maximum_minimum_nights                        50378 non-null  int64  \n",
+      " 51  minimum_maximum_nights                        50378 non-null  int64  \n",
+      " 52  maximum_maximum_nights                        50378 non-null  int64  \n",
+      " 53  minimum_nights_avg_ntm                        50378 non-null  float64\n",
+      " 54  maximum_nights_avg_ntm                        50378 non-null  float64\n",
+      " 55  calendar_updated                              50378 non-null  object \n",
+      " 56  has_availability                              50378 non-null  object \n",
+      " 57  availability_30                               50378 non-null  int64  \n",
+      " 58  availability_60                               50378 non-null  int64  \n",
+      " 59  availability_90                               50378 non-null  int64  \n",
+      " 60  availability_365                              50378 non-null  int64  \n",
+      " 61  requires_license                              50378 non-null  object \n",
+      " 62  instant_bookable                              50378 non-null  object \n",
+      " 63  is_business_travel_ready                      50378 non-null  object \n",
+      " 64  cancellation_policy                           50378 non-null  object \n",
+      " 65  require_guest_profile_picture                 50378 non-null  object \n",
+      " 66  require_guest_phone_verification              50378 non-null  object \n",
+      " 67  calculated_host_listings_count                50378 non-null  int64  \n",
+      " 68  calculated_host_listings_count_entire_homes   50378 non-null  int64  \n",
+      " 69  calculated_host_listings_count_private_rooms  50378 non-null  int64  \n",
+      " 70  calculated_host_listings_count_shared_rooms   50378 non-null  int64  \n",
+      "dtypes: float64(10), int64(19), object(42)\n",
+      "memory usage: 27.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "listings.info()"
    ]
   },
   {
