Adding price stuff

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -84,10 +84,10 @@
     "- Spend 10 minutes to check-in with your classmates to hear about what they have discovered\n",
     "- Spend 10 minutes looking at the data a bit more and thinking about issues you'll face\n",
     "\n",
-    "Remember you're trying to predict is a host has a `high_number_of_reviews` based on the host's listings.\n",
+    "Remember you're trying to predict is a listing has a `high_price`.\n",
     "\n",
     "Consider these questions\n",
-    "- Which columns do you think will best predict `high_number_of_reviews`?\n",
+    "- Which columns do you think will best predict `high_price`?\n",
     "- Are there columns with data that needs to be converted to a better format?\n",
     "- How many listings are there per host?\n",
     "- What should you do about null values?\n",
@@ -96,16 +96,16 @@
     "\n",
     "You have two csvs imported into pandas dataframes at this point.\n",
     "\n",
-    "**`total_ratings_per_host`**\n",
+    "**`price`**\n",
     "\n",
     "This is a table indexed with `host_id` and containing two columns:\n",
     "\n",
-    "- `reviews_per_month` contains the total average number of reviews the host gets per month across all of their listings.\n",
-    "- `high_number_of_reviews` contains a boolean (0 or 1) indicating if the total average number is above the median for all hosts.\n",
+    "- `price` is the price per day of stay in USD of the list \n",
+    "- `high_price` is true for listings where the price is above the median of $100\n",
     "\n",
     "**`listings`**\n",
     "\n",
-    "This table contains a bunch of data. The `host_id` column can be used to join between this table and the `total_ratings_per_host` table.\n",
+    "This table contains a bunch of data. The `id` column can be used to join between this table and the `price` table.\n",
     "\n",
     "This table has a bunch of interesting challenges. Some starter code is provided to get you going."
    ]
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "total_ratings_per_host.shape"
+    "prices.shape"
    ]
   },
   {
@@ -211,7 +211,7 @@
     }
    ],
    "source": [
-    "total_ratings_per_host.head()"
+    "prices.head()"
    ]
   },
   {
@@ -623,12 +623,11 @@
     "- Spend 10 minutes to check-in with your classmates to hear about what they have discovered\n",
     "- Spend 25 minutes working on building a feature vector\n",
     "\n",
-    "Remember you're trying to predict is a host has a `high_number_of_reviews` based on the host's listings.\n",
+    "Remember you're trying to predict is a listing has a `high_price`.\n",
     "\n",
     "Consider these questions\n",
-    "- How are you going to aggregate listings?\n",
     "- What should you do about null values?\n",
-    "- Which columns do you think will best predict `high_number_of_reviews`?\n",
+    "- Which columns do you think will best predict `high_price`?\n",
     "- How are you going to analyze your features?"
    ]
   },
@@ -725,7 +724,7 @@
     "features = pd.DataFrame()\n",
     "\n",
     "# Attach the target value for ease of analysis\n",
-    "features['target'] = total_ratings_per_host['high_number_of_reviews']\n",
+    "features['target'] = prices['high_price'].astype(int)\n",
     "\n",
     "# Here is an example feature\n",
     "features['count_of_listings'] = listings.groupby('host_id')['id'].count()\n",
