Updated starter notebook

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -727,7 +727,7 @@
     "features['target'] = prices['high_price'].astype(int)\n",
     "\n",
     "# Here is an example feature\n",
-    "features['count_of_listings'] = listings.groupby('host_id')['id'].count()\n",
+    "features['num_beds'] = listings['beds']\n",
     "\n",
     "print(features.shape)\n",
     "features.head()"
