Add final thoughts on text data

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -845,7 +845,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A Brief Aside on Text Features..."
+    "#### A Brief Aside on Text Features...\n",
+    "\n",
+    "- Try out some regex! https://regex101.com/\n",
+    "- [Take a look at TFIDF](https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html)\n",
+    "  - Pay attention to stop words, \n",
+    "  - [We can also use a different tokenizer...](https://scikit-learn.org/stable/modules/feature_extraction.html#customizing-the-vectorizer-classes)\n",
+    "  - "
    ]
   },
   {
