Add a note on lemmatization

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -851,7 +851,7 @@
     "- [Take a look at TFIDF](https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html)\n",
     "  - Pay attention to stop words, \n",
     "  - [We can also use a different tokenizer...](https://scikit-learn.org/stable/modules/feature_extraction.html#customizing-the-vectorizer-classes)\n",
-    "  - "
+    "    - Lematization helps to find the lemma (root) word we're dealing with. Ex studying --> study"
    ]
   },
   {
